<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Assistive Touch</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="accessibility_service_description">
        When you enable this permission the application will use it to manipulate
        Back, Home, recent applications and notifications
        Rest assured the application does not collect any of your information
    </string>
    <string name="change_background_color_touch">Change color background touch</string>
    <string name="Change_Icon_Touch">Change Icon Touch</string>
    <string name="Change_Layout_Touch">Change layout touch</string>
    <string name="device_admin_permistion">Device administration</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="rate_app">Rate app</string>
    <string name="share_app">Share</string>
    <string name="panel_main_app">Application</string>
    <string name="panel_main_lockscreen">LockScreen</string>
    <string name="panel_main_control">Control</string>
    <string name="panel_main_back">Back</string>
    <string name="panel_main_ringmode">Ring mode</string>
    <string name="panel_main_Recents">Recents</string>
    <string name="panel_main_home">Home</string>
    <string name="panel_main_notification">Notification</string>
    <string name="panel_secondary_auto_rotate">Auto Rotate</string>
    <string name="panel_secondary_plane">Airplane mode</string>
    <string name="panel_secondary_light">Light</string>
    <string name="panel_secondary_wifi">Wifi</string>
    <string name="panel_secondary_Flash">Flash</string>
    <string name="panel_secondary_bluetooth">Bluetooth</string>
    <string name="dialog_ok">Ok</string>
    <string name="panel_main_lowsound">Volume down</string>
    <string name="panel_main_upsound">Volume up</string>
    <string name="Desc">Turn down the volume</string>
    <string name="layout_preview">Preview</string>
    <string name="choise_color_backgound">Choise Color background</string>
    <string name="titleActionbar_Security">Privacy Policy</string>
    <string name="content_Security">Content Desc</string>
    <string name="permistion_deviceadmin">You need to enable this permission, if you do not agree, you can cancel, using
        a quick screen lock will not be accepted
    </string>
    <string name="title_changelayout">Optional layout</string>
    <string name="title_change_event">Change Event</string>
    <string name="content2_intro">If you want to learn about the permissions that the application requires, please read
        our policies and privacy
    </string>
    <string name="content3_intro">When you use the screen lock you need to activate this permission, Go to the
        application to turn it off if you do not want to use it anymore
    </string>
    <string name="content1_intro"/>
    <string name="title_dialog_choiseicon">Choice Icon</string>
    <string name="warning_choiseApp">Touch and hold the icon to change the application</string>
    <string name="warning_Assibility">Find Assistive Touch and turn on the accessibility to make the button work
        properly
    </string>
    <string name="warning_notsuportBluetooth">Device does not support bluetooth</string>
    <string name="warning_Returnapp">Click Here for return to app!</string>
    <string name="title_changebackgound">Change background color</string>
    <string name="Finish">Finish</string>
    <string name="title_changeapp">Pick app</string>
    <string name="layout_text_main">Main panel</string>
    <string name="panel_main_ringmodeoff">Normal mode</string>
    <string name="panel_main_ringmodeon">Ring mode</string>
</resources>