<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ColorbackgroundPickerActivity"
        android:orientation="vertical">
    <RelativeLayout
            android:id="@+id/layout_ads"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:visibility="gone"/>
    <LinearLayout
            android:layout_above="@id/layout_ads"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <TextView
            android:clickable="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/vailo"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="@dimen/_13sdp"
            android:layout_width="match_parent"
            android:text="@string/layout_preview"
            android:layout_height="wrap_content"/>
    <RelativeLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/customlayouttouch"
            android:visibility="visible"
            android:id="@+id/fullTouchLayoutpicker"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
                android:weightSum="3"
                android:id="@+id/maintouch_layouttable"
                android:gravity="center"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_250sdp"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:weightSum="9"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal">
                <LinearLayout
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:weightSum="10"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:scaleType="fitCenter"
                            android:layout_margin="@dimen/_2sdp"
                            android:id="@+id/control_ungdung_img"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_panelapp"
                            android:layout_weight="8"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"/>
                    <TextView
                            android:id="@+id/control_ungdung"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:text="@string/panel_main_app"
                            android:layout_height="0dp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:weightSum="10"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:id="@+id/control_khoamanhinh_img"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_panellock"
                            android:layout_weight="8"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"/>

                    <TextView
                            android:layout_weight="2"
                            android:id="@+id/control_khoamanhinh"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:text="@string/panel_main_lockscreen"
                            android:layout_height="0dp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:weightSum="10"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:id="@+id/control_dieukhien_img"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_panelcontrol"
                            android:layout_weight="8"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"/>
                    <TextView
                            android:id="@+id/control_dieukhien"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:text="@string/panel_main_control"
                            android:layout_height="0dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:weightSum="9"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                <LinearLayout
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:weightSum="10"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:id="@+id/control_quaylai_img"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_panelbacksytem"
                            android:layout_weight="8"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"/>
                    <TextView
                            android:id="@+id/control_quaylai"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:text="@string/panel_main_back"
                            android:layout_height="0dp"/>
                </LinearLayout>
                <TextView

                        android:layout_weight="3"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <LinearLayout
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:weightSum="10"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:id="@+id/control_chedoam_img"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_panelringmode"
                            android:layout_weight="8"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"/>
                    <TextView

                            android:id="@+id/control_chedoam"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:text="@string/panel_main_ringmode"
                            android:layout_height="0dp"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:weightSum="9"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                <LinearLayout
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:weightSum="10"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:scaleType="fitCenter"
                            android:id="@+id/control_danhiem_img"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_panelrecents"
                            android:layout_weight="8"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"/>
                    <TextView
                            android:layout_weight="2"
                            android:id="@+id/control_danhiem"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:text="@string/panel_main_Recents"
                            android:layout_height="0dp"
                            tools:ignore="NestedWeights"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:weightSum="10"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:scaleType="fitCenter"
                            android:id="@+id/control_manhinhchinh_img"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_panelhome"
                            android:layout_weight="8"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"/>

                    <TextView
                            android:layout_weight="2"
                            android:id="@+id/control_manhinhchinh"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:text="@string/panel_main_home"
                            android:layout_height="0dp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:weightSum="10"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:scaleType="fitCenter"
                            android:id="@+id/control_thongbao_img"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_panelnotification"
                            android:layout_weight="8"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"/>
                    <TextView
                            android:id="@+id/control_thongbao"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:text="@string/panel_main_notification"
                            android:layout_height="0dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout

            android:layout_margin="@dimen/_15sdp"
            android:visibility="visible"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">
        <Button
                android:layout_centerInParent="true"
                android:id="@+id/btnpicker_color_backgound"
                android:layout_alignParentEnd="true"
                android:background="@drawable/custommenu1"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"/>
        <TextView
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:text="@string/choise_color_backgound"
                android:textColor="#141414"
                android:textSize="@dimen/_13sdp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
    </RelativeLayout>
    </LinearLayout>
</RelativeLayout>